[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
ncurses = "5.101.0"
rand = "0.8.5"
tui = "0.19.0"

[[bin]]
name = "main2"
path = "src/main2.rs"

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "tui_example"
path = "src/tui_example.rs"

[[bin]]
name = "canvas"
path = "src/canvas.rs"

[[bin]]
name = "http_server"
path = "src/http_server.rs"

[[bin]]
name = "ncurses_example"
path = "src/ncurses_example.rs"

[[bin]]
name = "snake"
path = "src/snake.rs"
